# rustywidgets

./: Cargo.toml  LICENSE  README.md  icon-128x128@2x.png.icns
install/: build_app_bundle.py  build_app_bundle.sh  launch.sh
resources/: placeholder.txt
src/: main.rs
